--- a/package.json
+++ b/package.json
@@ -10,15 +10,20 @@
   },
   "dependencies": {
     "@prisma/client": "^5.8.1",
+    "date-fns": "^3.3.1",
     "html-react-parser": "^5.1.1",
     "jose": "^5.2.0",
     "js-cookie": "^3.0.5",
+    "moment": "^2.30.1",
     "next": "14.1.0",
     "nextjs-toploader": "^1.6.4",
     "nodemailer": "^6.9.8",
     "react": "^18",
     "react-dom": "^18",
     "react-hot-toast": "^2.4.1",
+    "react-icons": "^5.0.1",
+    "react-slick": "^0.30.1",
+    "slick-carousel": "^1.8.1",
     "slugify": "^1.6.6"
   },
   "devDependencies": {
