--- a/package.json
+++ b/package.json
@@ -24,7 +24,8 @@
     "react-icons": "^5.0.1",
     "react-slick": "^0.30.1",
     "slick-carousel": "^1.8.1",
-    "slugify": "^1.6.6"
+    "slugify": "^1.6.6",
+    "swiper": "^11.0.5"
   },
   "devDependencies": {
     "autoprefixer": "^10.0.1",
